feat: create/edit products page

--- a/web/src/app/components/action-bar/action-bar.component.html
+++ b/web/src/app/components/action-bar/action-bar.component.html
@@ -6,7 +6,7 @@
   </ng-container>
 
   <ng-container *ngIf="isProductRegistrationRoute">
-    <button mat-icon-button class="save-button" (click)="salvarProduto()">
+    <button mat-icon-button class="save-button" (click)="save()">
       <mat-icon>save</mat-icon>
     </button>
     <button mat-icon-button class="delete-button" (click)="excluirProduto()">
