--- a/web/src/app/components/products-stores-table/products-stores-table.component.html
+++ b/web/src/app/components/products-stores-table/products-stores-table.component.html
@@ -1,4 +1,37 @@
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <ng-container matColumnDef="add">
+    <th mat-header-cell *matHeaderCellDef>
+      <button mat-icon-button class="add-button" type="button" (click)="openProductStoreModal()">
+        <mat-icon>add</mat-icon>
+      </button>
+    </th>
+    <td mat-cell *matCellDef="let element"></td>
+  </ng-container>
+
+  <ng-container matColumnDef="store_name">
+    <th mat-header-cell *matHeaderCellDef> Loja </th>
+    <td mat-cell *matCellDef="let element"> {{element.storeDescription}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="sale_price">
+    <th mat-header-cell *matHeaderCellDef> Preço de Venda (R$) </th>
+    <td mat-cell *matCellDef="let element">
+      {{element.salePrice | currency: 'BRL':'symbol':'1.2-2'}}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element" class="actions-cell">
+      <button mat-icon-button color="warn" type="button"  (click)="openDeleteConfirmationModal(element)">
+        <mat-icon>delete</mat-icon>
+      </button>
+      <button mat-icon-button color="primary" type="button" (click)="openProductStoreModal(element)">
+        <mat-icon>edit</mat-icon>
+      </button>
+    </td>
+  </ng-container>
+
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
