feat: implement frontend

--- a/web/src/app/components/delete-confirmation-modal/delete-confirmation-modal.component.html
+++ b/web/src/app/components/delete-confirmation-modal/delete-confirmation-modal.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title>Confirmar Exclusão</h2>
 <mat-dialog-content>
-  Tem certeza que deseja excluir a loja "{{ data.storeDescription }}" deste produto?
+  {{ data.message }}
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button (click)="onCancel()">Cancelar</button>
