--- a/web/src/app/components/image-upload/image-upload.component.html
+++ b/web/src/app/components/image-upload/image-upload.component.html
@@ -1,7 +1,7 @@
 <div class="image-upload">
   <label for="file-input">
-    <div class="image-preview" *ngIf="imageUrl; else placeholder">
-      <img [src]="imageUrl" alt="Image Preview" />
+    <div class="image-preview" *ngIf="initialImage; else placeholder">
+      <img [src]="initialImage" alt="Image Preview" />
     </div>
     <ng-template #placeholder>
       <div class="placeholder">Clique para adicionar uma imagem</div>
