--- a/web/src/app/components/products-table/products-table.component.html
+++ b/web/src/app/components/products-table/products-table.component.html
@@ -1,26 +1,26 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<table mat-table [dataSource]="dataSource" matSort (matSortChange)="onSortChange($event)" class="mat-elevation-z8">
   <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef> Código </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Código </th>
     <td mat-cell *matCellDef="let element"> {{element.id}} </td>
   </ng-container>
 
   <ng-container matColumnDef="description">
-    <th mat-header-cell *matHeaderCellDef> Descrição </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Descrição </th>
     <td mat-cell *matCellDef="let element"> {{element.description}} </td>
   </ng-container>
 
   <ng-container matColumnDef="cost">
-    <th mat-header-cell *matHeaderCellDef> Custo (R$) </th>
-    <td mat-cell *matCellDef="let element"> {{element.cost}} </td>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Custo (R$) </th>
+    <td mat-cell *matCellDef="let element"> {{element.cost | currency:'BRL':'symbol':'1.2-2'}} </td>
   </ng-container>
 
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let element" class="actions-cell">
-      <button mat-icon-button color="warn">
+      <button mat-icon-button color="warn" (click)="openDeleteConfirmationModal(element)">
         <mat-icon>delete</mat-icon>
       </button>
-      <button mat-icon-button color="primary">
+      <button mat-icon-button color="primary" [routerLink]="['/produto/cadastro', element.id]">
         <mat-icon>edit</mat-icon>
       </button>
     </td>
@@ -29,3 +29,11 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+
+<mat-paginator
+  [length]="totalItems"
+  [pageSize]="pageSize"
+  [pageSizeOptions]="[5, 10, 25, 100]"
+  (page)="onPageChange($event)"
+  aria-label="Select page">
+</mat-paginator>
