fix: some specs and frontend bugs

--- a/web/src/app/components/action-bar/action-bar.component.html
+++ b/web/src/app/components/action-bar/action-bar.component.html
@@ -9,7 +9,7 @@
     <button mat-icon-button class="save-button" (click)="save()">
       <mat-icon>save</mat-icon>
     </button>
-    <button mat-icon-button class="delete-button" (click)="excluirProduto()">
+    <button mat-icon-button class="delete-button" (click)="deleteProduct()">
       <mat-icon>delete</mat-icon>
     </button>
   </ng-container>
